test/integration/good/warning/identifiers.stan
data {
  int upper;
  int lower;
  int multiplier;
  int offset;
}
