test/integration/bad/new/variable-decl-bad5.stan
data { row_vector while;}